--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "axios": "^1.1.3",
     "core-js": "^3.6.5",
+    "css-color-function": "^1.3.3",
     "element-plus": "^1.0.2-beta.71",
     "md5": "^2.3.0",
+    "rgb-hex": "^4.0.0",
     "vue": "^3.0.0",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.0-0",
