--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "element-plus": "^1.1.0-beta.1",
     "md5": "^2.3.0",
     "rgb-hex": "^4.0.0",
+    "screenfull": "^5.1.0",
     "vue": "^3.0.0",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.0-0",
